<resources>
<string name="app_name">BEARApp</string>
<string name="log_in">LOG IN</string>
<string name="barangay_194_emergency_alert_amp_response">
<![CDATA[ Barangay 194 Emergency Alert & Response ]]>
</string>
<string name="sign_up">SIGN UP</string>
<string name="b_e_a_r">B.E.A.R</string>
<string name="login_as_residents">Login as Residents</string>
<string name="login_as_responder">Login as Responder</string>
<string name="email_Address">Email Address</string>
<string name="password">Password</string>
<string name="logo">logo</string>
<string name="sign_up1">Sign Up</string>
<string name="first_name">First Name</string>
<string name="last_name">Last Name</string>
<string name="birthday">Birth Date</string>
<!--   Added for User Type Spinner   -->
<string name="select_user_type_prompt">Select User Type</string>
<string name="user_type_responder">Sign up as Responder</string>
<!--   Added for comparison   -->
<string-array name="user_types_array">
<item>Sign up as Resident</item>
<item>@string/user_type_responder</item>
<!--   Referencing the new string   -->
</string-array>
<!--   Added for Responder Type Spinner   -->
<string name="select_responder_type_prompt">Select Responder Type</string>
<string-array name="responder_types_array">
<item>Select Responder Type</item>
<!--   Prompt   -->
<item>barangay</item>
<item>fire</item>
<item>hospital</item>
<item>police</item>
</string-array>
<!--   Strings for SignUpPage validation and messages   -->
<string name="signup_error_first_name_required">First name is required</string>
<string name="signup_error_last_name_required">Last name is required</string>
<string name="signup_error_email_required">Email is required</string>
<string name="signup_error_invalid_email">Enter a valid email</string>
<string name="signup_error_password_required">Password is required</string>
<string name="signup_error_password_length">Password must be at least 6 characters</string>
<string name="signup_toast_select_responder_type">Please select a valid Responder Type</string>
<string name="signup_toast_registration_failed">Registration failed.</string>
<string name="signup_toast_error_parsing_response"> Error reading server response.</string>
<string name="signup_toast_registration_network_error">Registration error: %1$s</string>
<!--  Added for Login User Type Spinner  -->
<string name="login_type_resident">Login as Resident</string>
<string name="login_type_responder">Login as Responder</string>
<string-array name="login_user_types_array">
<item>@string/login_type_resident</item>
<item>@string/login_type_responder</item>
</string-array>
<!--  Strings for LoginActivity  -->
<string name="login__email_required">Email is required</string>
<!--  Added this line  -->
<string name="login_error_email_required">Email is required</string>
<string name="login_error_password_required">Password is required</string>
<string name="login_error_user_data_missing">Login error: User data missing in response.</string>
<string name="login_error_user_id_missing">Login error: User ID missing in response.</string>
<string name="login_error_user_role_missing">Login error: User role missing in response.</string>
<string name="login_toast_success">Login Successful as %1$s</string>
<string name="login_error_role_mismatch">Login failed: Account role (%1$s) does not match selected login type (%2$s).</string>
<string name="login_error_generic_login_failed">Login Failed</string>
<string name="login_error_server_response_parsing">Error reading server response.</string>
<string name="login_error_network">Login Error: %1$s</string>
<string name="signup_toast_registration_failed_empty_response">Registration failed: Empty or invalid server response.</string>
<string name="back">Back</string>
<string name="navigation_drawer_open">Open navigation drawer</string>
<string name="navigation_drawer_close">Close navigation drawer</string>
</resources>