<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPage"
    android:background="@color/body">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="60dp"
                android:contentDescription="@string/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/bear" />

            <TextView
                android:id="@+id/su"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/b_font"
                android:text="@string/sign_up1"
                android:textColor="@color/blue"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <!-- Added TextView for persistent errors -->
            <TextView
                android:id="@+id/tvSignUpError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/r_font"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/su"
                tools:text="This is a sample error message."
                tools:visibility="visible" />

            <Spinner
                android:id="@+id/spinner_user_type"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/filler"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSignUpError"
                android:entries="@array/user_types_array"
                android:prompt="@string/select_user_type_prompt" />

            <Spinner
                android:id="@+id/spinner_responder_type"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/filler"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_user_type"
                android:entries="@array/responder_types_array"
                android:prompt="@string/select_responder_type_prompt"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/fn"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/filler"
                android:ems="10"
                android:fontFamily="@font/r_font"
                android:hint="@string/first_name"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:textColorHint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_responder_type"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/ln"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/filler"
                android:ems="10"
                android:fontFamily="@font/r_font"
                android:hint="@string/last_name"
                android:inputType="textPersonName|textCapWords"
                android:padding="10dp"
                android:textColorHint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fn"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/filler"
                android:ems="10"
                android:fontFamily="@font/r_font"
                android:hint="Username (optional)"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ln" />

            <EditText
                android:id="@+id/EmailAddress"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/filler"
                android:ems="10"
                android:fontFamily="@font/r_font"
                android:hint="@string/email_Address"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColorHint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etUsername"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/etContact"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/filler"
                android:ems="10"
                android:fontFamily="@font/r_font"
                android:hint="Contact Number"
                android:inputType="phone"
                android:padding="10dp"
                android:textColorHint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/filler"
                android:ems="10"
                android:fontFamily="@font/r_font"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColorHint="@color/blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etContact"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/bday"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/filler"
                android:ems="10"
                android:fontFamily="@font/r_font"
                android:hint="@string/birthday"
                android:inputType="date"
                android:padding="10dp"
                android:textColorHint="@color/blue"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:id="@+id/signupp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/c_button"
                android:fontFamily="@font/b_font"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bday" />

            <ProgressBar
                android:id="@+id/progressBarSignUp"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="visible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>